# oracle-cloud-free-arm-provisioner

./: Dockerfile  README.md  docker-compose.yml  oci.env.example  oci_config.example  pyproject.toml  requirements.txt
src/: main.py
